[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-cache = "0.2.2"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
num = "0.4.1"
pathfinding = "4.6.0"
rayon = "1.8.0"
winnow = "0.5.26"

[lints.clippy]
pedantic = "warn"
